[package]
name = "httpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12"

[dependencies.time]
version = "0.3"

[target.'cfg(target_os = "hermit")'.dependencies.hermit-sys]
hermit-sys = "0.5.1"
default-features = false
features = ["pci","tcp"]
